complete unit tests; refactor service signature